testcases/errors/assign0.boo
"""
assign0.boo(6,5): BCE0022: Cannot convert 'System.String' to 'System.Int32'.
assign0.boo(7,1): BCE0049: Expression can't be assigned to.
"""
a = 3
a = "foo"
3 = "bar"
